--- a/RD3/Themes/Converters.xaml
+++ b/RD3/Themes/Converters.xaml
@@ -14,4 +14,5 @@
     <rd3:ItemCountToBoolConverter x:Key="ItemCountToBoolConverter" />
     <rd3:SelectedItemCountToVisibilityConverter x:Key="SelectedItemCountToVisibilityConverter" />
     <rd3:NumericCompareToVisibilityConverter x:Key="NumericCompareToVisibilityConverter" />
+    <rd3:NumericToBoolConverter x:Key="NumericToBoolConverter" />
 </ResourceDictionary>
