--- a/RD3/Views/DOEDesignView.xaml
+++ b/RD3/Views/DOEDesignView.xaml
@@ -9,12 +9,14 @@
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
+    xmlns:rd3="clr-namespace:RD3"
     xmlns:shared="clr-namespace:RD3.Shared;assembly=RD3.Shared"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:viewmodels="clr-namespace:RD3.ViewModels"
     Width="1200"
     Height="530"
     d:DataContext="{d:DesignInstance Type=viewmodels:DOEDesignViewModel}"
+    rd3:DraggableUserControlAttach.IsDraggable="True"
     FontFamily="{StaticResource ENGFontFamily}"
     TextElement.FontSize="{DynamicResource NormalFontSize}"
     TextElement.FontWeight="Regular"
