--- a/RD3/Views/RegisterView.xaml
+++ b/RD3/Views/RegisterView.xaml
@@ -9,10 +9,12 @@
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
+    xmlns:rd3="clr-namespace:RD3"
     xmlns:viewmodels="clr-namespace:RD3.ViewModels"
     Width="300"
     Height="250"
     d:DataContext="{d:DesignInstance Type=viewmodels:RegisterViewModel}"
+    rd3:DraggableUserControlAttach.IsDraggable="True"
     TextElement.FontFamily="{StaticResource CHNFontFamily}"
     TextElement.FontWeight="Regular"
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
