--- a/RD3/Views/AddSampleView.xaml
+++ b/RD3/Views/AddSampleView.xaml
@@ -11,11 +11,13 @@
     xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:pass="clr-namespace:RD3.Extensions"
     xmlns:prism="http://prismlibrary.com/"
+    xmlns:rd3="clr-namespace:RD3"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:viewmodels="clr-namespace:RD3.ViewModels"
     Width="700"
     Height="200"
     d:DataContext="{d:DesignInstance Type=viewmodels:EditBatchViewModel}"
+    rd3:DraggableUserControlAttach.IsDraggable="True"
     Background="Transparent"
     mc:Ignorable="d">
     <prism:Dialog.WindowStyle>
