--- a/RD3/Views/ChooseReactorView.xaml
+++ b/RD3/Views/ChooseReactorView.xaml
@@ -8,10 +8,12 @@
     xmlns:local="clr-namespace:RD3.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
+    xmlns:rd3="clr-namespace:RD3"
     xmlns:viewmodels="clr-namespace:RD3.ViewModels"
     Width="300"
     Height="450"
     d:DataContext="{d:DesignInstance Type=viewmodels:ChooseReactorViewModel}"
+    rd3:DraggableUserControlAttach.IsDraggable="True"
     mc:Ignorable="d">
     <prism:Dialog.WindowStyle>
         <Style TargetType="Window">
@@ -30,6 +32,13 @@
             <Setter Property="Background" Value="Transparent" />
         </Style>
     </prism:Dialog.WindowStyle>
+    <UserControl.Resources>
+        <DataTemplate x:Key="FirstCell">
+            <StackPanel Orientation="Horizontal">
+                <CheckBox IsChecked="{Binding Path=IsSelected, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListViewItem}}}" />
+            </StackPanel>
+        </DataTemplate>
+    </UserControl.Resources>
     <Border Style="{StaticResource BorderGray}">
         <Grid>
             <Grid.RowDefinitions>
@@ -54,6 +63,7 @@
                 Style="{StaticResource ListViewBaseStyle}">
                 <ListView.View>
                     <GridView>
+                        <GridViewColumn Width="30" CellTemplate="{StaticResource FirstCell}" />
                         <GridViewColumn
                             Width="100"
                             DisplayMemberBinding="{Binding Name}"
