--- a/RD3/Views/DOEMainView.xaml
+++ b/RD3/Views/DOEMainView.xaml
@@ -9,10 +9,12 @@
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
+    xmlns:rd3="clr-namespace:RD3"
     xmlns:viewmodels="clr-namespace:RD3.ViewModels"
     Width="900"
     Height="530"
     d:DataContext="{d:DesignInstance Type=viewmodels:DOEMainViewModel}"
+    rd3:DraggableUserControlAttach.IsDraggable="True"
     FontFamily="{StaticResource ENGFontFamily}"
     TextElement.FontSize="{DynamicResource NormalFontSize}"
     TextElement.FontWeight="Regular"
