--- a/RD3/Views/EditClientView.xaml
+++ b/RD3/Views/EditClientView.xaml
@@ -8,10 +8,12 @@
     xmlns:local="clr-namespace:RD3.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
+    xmlns:rd3="clr-namespace:RD3"
     xmlns:viewmodels="clr-namespace:RD3.ViewModels"
     Width="250"
     Height="350"
     d:DataContext="{d:DesignInstance Type=viewmodels:EditClientViewModel}"
+    rd3:DraggableUserControlAttach.IsDraggable="True"
     mc:Ignorable="d">
     <prism:Dialog.WindowStyle>
         <Style TargetType="Window">
