--- a/RD3/Views/ProgressView.xaml
+++ b/RD3/Views/ProgressView.xaml
@@ -5,8 +5,10 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:RD3.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:rd3="clr-namespace:RD3"
     d:DesignHeight="450"
     d:DesignWidth="800"
+    rd3:DraggableUserControlAttach.IsDraggable="True"
     mc:Ignorable="d">
     <Grid>
         <StackPanel Width="100">
