--- a/RD3/Views/MainView.xaml
+++ b/RD3/Views/MainView.xaml
@@ -13,9 +13,9 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:viewmodels="clr-namespace:RD3.ViewModels"
-    Title="MainWindow"
+    Title="{ex:Language Key='MainWindow'}"
     Width="1530"
-    Height="950"
+    Height="930"
     d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
     prism:ViewModelLocator.AutoWireViewModel="True"
     AllowsTransparency="True"
